--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,6 @@
-core.Microsoft*
-core.mongo*
-core.python*
+.venv
+*sqlite3
+*.pyc
+__pycache__
+env
 env.py
-__pycache__/
-*.py[cod]
-node_modules/
-.github/
-cloudinary_python.txt
-*.sqlite3
-*.__pycache__
