--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,7 @@ networkx==3.4.2
 numpy==2.2.4
 packaging==24.2
 pillow==10.3.0
+pip-check==3.1
 psycopg2==2.9.10
 psycopg2-binary==2.9.10
 pyasn1==0.6.1
@@ -46,6 +47,7 @@ six==1.17.0
 sqlparse==0.5.3
 stripe==12.0.1
 sympy==1.13.1
+terminaltables==3.1.10
 torch==2.6.0
 torchaudio==2.6.0
 torchvision==0.21.0
